# auth-fastapi-beanie-poetry

./: .env  .gitignore  Containerfile  README.md  build_fastapi.sh  endpoints-naming-conventions.md  pod_setup.sh  poetry.md  pyproject.toml  request_bash.sh  request_bash_simple.sh  request_curl_podman.sh  setup_nginx_proxy.sh  structure1.md  test-api.http
auth_fastapi_beanie_poetry/: cli.py  config.py  database.py  main.py
auth_fastapi_beanie_poetry/api/v1/endpoints/: auth.py  test_template.py
auth_fastapi_beanie_poetry/core/: config.py  security.py  token.py  utils.py
auth_fastapi_beanie_poetry/crud/: user.py
auth_fastapi_beanie_poetry/db/: mongo.py
auth_fastapi_beanie_poetry/models/: reset_token.py  token.py  user.py
auth_fastapi_beanie_poetry/schemas/: user.py
auth_fastapi_beanie_poetry/services/: auth_services.py  email_services.py
auth_fastapi_beanie_poetry/templates/: reset_password.html
auth_fastapi_beanie_poetry/utils/: security.py
data/db/: create_admin.sh  db_app_user.sh  db_init.sh  first_user_entry.sh  first_user_entry_cli.sh  podman.sh  query.js  queryMongodb.js
files-structure-models/: domain-driven-layered-structure.md  domain-driven-structure.md  layered-todo-fastapi-mongodb.md  structure1.md  structure2.md  structure3.md  structure4.md  todo-app-chatgpt.md
tests/: functiontest.py
