[tool.poetry]
name = "auth-fastapi-beanie-poetry"
version = "0.1.0"
description = ""
authors = ["Christian Bueno <chmabuen@espol.edu.ec>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
beanie = "^1.26.0"
uvicorn = "^0.30.0"
passlib = "^1.7.4"
pyjwt = "^2.8.0"
pydantic-settings = "^2.3.1"
bcrypt = "^4.2.1"
typer = {extras = ["all"], version = "^0.15.1"}
pydantic = {extras = ["email"], version = "^2.10.6"}
aiosmtplib = "^4.0.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "auth_fastapi_beanie_poetry.main:start"
create-admin = "auth_fastapi_beanie_poetry.cli:cli"
